# paydesk-backoffice

./: AI_CONTEXT.md  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json
docs/: desktop.md
scripts/: audit-switches.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/activateStore/: page.tsx
src/app/analytics/: page.tsx
src/app/bank/: page.tsx
src/app/billing/: page.tsx
src/app/createStore/: page.tsx
src/app/customers/: page.tsx
src/app/dashboard/: page.tsx
src/app/departments/: page.tsx
src/app/employees/: page.tsx
src/app/inventory/: page.tsx
src/app/login/: page.tsx
src/app/logs/: page.tsx
src/app/lottery/: page.tsx
src/app/loyalty/: page.tsx
src/app/payment/: page.tsx
src/app/permissions/: page.tsx
src/app/product-setup/: page.tsx
src/app/products/: page.tsx
src/app/recipe-suite/: page.tsx
src/app/reports/: page.tsx
src/app/send-to-pos/: page.tsx
src/app/services/: page.tsx
src/app/store-select/: page.tsx
src/app/stores/: page.tsx
src/app/verify-email/: page.tsx
src/components/auth/: LoginForm.tsx  OwnerSignupForm.tsx  RoleSelector.tsx  VerifyEmailScreen.tsx
src/components/dashboard/: DashboardOverview.tsx  MetricCard.tsx  QuickActions.tsx  RecentActivityCard.tsx  SalesTrendCard.tsx
src/components/inventory/: InventoryOverviewWorkspace.tsx  InventorySectionPage.tsx  (+3 more)
src/context/: StoreContext.tsx
src/lib/: apiClient.ts  authStorage.ts  storeTypeConfig.ts  theme.ts
(+102 files in other folders)
